--- a/hcss.cabal
+++ b/hcss.cabal
@@ -25,3 +25,11 @@ executable hcss
     bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test, src
+  main-is: Spec.hs
+  build-depends:
+    base  == 4.*,
+    hspec >= 1.3
