--- a/classi.cabal
+++ b/classi.cabal
@@ -22,7 +22,8 @@ executable classi
   build-depends:
     base >=4.6 && <4.8,
     parsec,
-    bytestring
+    bytestring,
+    text
   hs-source-dirs:      src
   default-language:    Haskell2010
 
