--- a/classi.cabal
+++ b/classi.cabal
@@ -23,7 +23,8 @@ executable classi
     base >=4.6 && <4.8,
     parsec,
     bytestring,
-    text
+    text,
+    Decimal
   hs-source-dirs:      src
   default-language:    Haskell2010
 
