--- a/classi.cabal
+++ b/classi.cabal
@@ -23,8 +23,7 @@ executable classi
     base >=4.6 && <4.8,
     parsec,
     bytestring,
-    text,
-    Decimal
+    text
   hs-source-dirs:      src
   default-language:    Haskell2010
 
