--- a/classi.cabal
+++ b/classi.cabal
@@ -33,4 +33,6 @@ test-suite spec
   main-is: Spec.hs
   build-depends:
     base  == 4.*,
-    hspec >= 1.3
+    hspec >= 1.3,
+    parsec,
+    text
